--- a/index.html
+++ b/index.html
@@ -44,7 +44,82 @@
             </div>
         </div>
 
+
+        <div class="main">
+            <nav>
+                <ul class="options">
+                    <button class="hourly">Today</button>
+                    <button class="week-active">Week</button>
+                </ul>
+                 <ul class="options-units">
+                    <button class="celcius">°C</button>
+                    <button class="fahrenheit">°F</button>
+                 </ul>  
+            </nav>
+            <div class="cards" id="weather-cards">
+                <div class="card">
+                <h2 class="day-name">Monday</h2>
+                <div class="card-icon">
+                    <img src="https://i.ibb.co/kBd2NTS/39.png" alt="">
+                </div>
+                <div class="day-temp">
+                    <h2 class="temp">32</h2>
+                    <span class="temp-unit">°C</span>
+                </div>
+            </div>
+        </div>
+            <div class="highlights">
+                <h2 class="heading">Today's Highlights</h2>
+                <div class="cards">
+                   <div class="card2">
+                    <h4 class="card-heading">UV Index</h4>
+                    <div class="content">
+                        <p class="uv-index">0</p>
+                        <p class="uv-text">Low</p>
+                    </div>
+                   </div>
+                   <div class="card2">
+                    <h4 class="card-heading">Wind Status</h4>
+                    <div class="content">
+                        <p class="wind-speed">0</p>
+                        <p class="wind-level">Low</p>
+                    </div>
+                   </div>
+                   <div class="card2">
+                    <h4 class="card-heading">Sunrise & Sunset</h4>
+                    <div class="content">
+                        <p class="sunrise">0</p>
+                        <p class="sunset">Low</p>
+                    </div>
+                   </div>
+                   <div class="card2">
+                    <h4 class="card-heading">Humidity</h4>
+                    <div class="content">
+                        <p class="humidity">0</p>
+                        <p class="humidity-status">Low</p>
+                    </div>
+                   </div>
+                   <div class="card2">
+                    <h4 class="card-heading">Visibility</h4>
+                    <div class="content">
+                        <p class="visibility">0</p>
+                        <p class="visibility-status">Low</p>
+                    </div>
+                   </div>
+                   <div class="card2">
+                    <h4 class="card-heading">Air Quality</h4>
+                    <div class="content">
+                        <p class="air-quality">0</p>
+                        <p class="air-quality-status">Low</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+                    <div class="credits">
+                        <p class="credits-para">Weather Prediction App by <span>PRAVEEN KUMAR</span></p>
+                    </div>
     </div>
+</div>
 
     <script src="./script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
