week data updated

--- a/index.html
+++ b/index.html
@@ -59,16 +59,7 @@
                 </ul>
             </nav>
             <div class="cards" id="weather-cards">
-                <div class="card">
-                    <h2 class="day-name">Monday</h2>
-                    <div class="card-icon">
-                        <img src="https://i.ibb.co/kBd2NTS/39.png" alt="">
-                    </div>
-                    <div class="day-temp">
-                        <h2 class="temp">32</h2>
-                        <span class="temp-unit">°C</span>
-                    </div>
-                </div>
+                <div class="card"></div>
             </div>
             <div class="highlights">
                 <h2 class="heading">Today's Highlights</h2>
