--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <nav>
                 <ul class="options">
                     <button class="hourly">Today</button>
-                    <button class="week-active">Week</button>
+                    <button class="week active">Week</button>
                 </ul>
                 <ul class="options-units">
-                    <button class="celcius">°C</button>
+                    <button class="celcius active">°C</button>
                     <button class="fahrenheit">°F</button>
                 </ul>
             </nav>
